prevent bottom of slide from being cut off

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -89,6 +89,7 @@
   }
 
   .main-content {
+    margin-bottom: 100px;
     padding: 20px 30px 10px;
     width: 66%;
     overflow-y: scroll;
